# stellar-crowdfund

./: .env.example  .gitignore  Cargo.toml  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
contracts/crowd-token/: Cargo.toml
contracts/crowd-token/src/: lib.rs
contracts/crowdfund/: Cargo.toml
contracts/crowdfund/src/: lib.rs
docs/: DEVELOPMENT.md  README.md
docs/screenshots/: README.md
scripts/: deploy.sh
src/__tests__/: cache.test.ts  components.test.tsx  jest-dom.d.ts  setup.ts  stellar.utils.test.ts  wallet.errors.test.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: CampaignCard.tsx  DonateModal.tsx  EventFeed.tsx  LoadingStates.tsx  ProgressBar.tsx  TxStatus.tsx  WalletConnect.tsx
src/hooks/: useContract.ts  useWallet.ts
src/lib/: cache.ts  stellar.ts  walletErrors.ts
