[workspace]
resolver = "2"
members = [
    "contracts/crowdfund",
    "contracts/crowd-token",
]

[workspace.dependencies]
soroban-sdk = { version = "22.0.0", features = ["alloc"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true